--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,7 +6,7 @@
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.6.7
+@version        1.6.8
 @license        MIT
 @preprocessor   stylus
 
@@ -32,26 +32,31 @@
 @advanced checkbox searchResultsColumn      "  🔎 Search Results In A Grid Layout" 1
 
 @advanced select customVideoDetails         "⚒️ Custom Video Details" ["Enabled", "Disabled"]
-@advanced checkbox shareBtn                 "  🫣 Hide Share Button" 0
-@advanced checkbox downloadBtn              "  🫣 Hide Download Button" 0
-@advanced checkbox clipBtn                  "  🫣 Hide Clip Button" 0
-@advanced checkbox thanksBtn                "  🫣 Hide Thanks Button" 0
-@advanced checkbox saveBtn                  "  🫣 Hide Save Button" 0
-@advanced checkbox commentSection           "  🫣 Hide Comments Section" 0
-@advanced checkbox textBtn                  "  🫣 Hide Text Buttons" 0
-@advanced checkbox endCards                 "  🫣 Hide End Cards" 0
-@advanced checkbox gameSection              "  ❌ Remove Game Section" 1
-@advanced checkbox musicSection             "  ❌ Remove Music Section" 0
+@advanced checkbox bellIcon                 "  🔔 Hide Bell Icon" 0
+@advanced checkbox shareBtn                 "  ➡️ Hide Share Button" 0
+@advanced checkbox downloadBtn              "  ⬇️ Hide Download Button" 0
+@advanced checkbox clipBtn                  "  ✂️ Hide Clip Button" 0
+@advanced checkbox thanksBtn                "  🙏 Hide Thanks Button" 0
+@advanced checkbox saveBtn                  "  💾 Hide Save Button" 0
+@advanced checkbox commentSection           "  💬 Hide Comments Section" 0
+@advanced checkbox textBtn                  "  💬 Hide Text Buttons" 0
+@advanced checkbox endCards                 "  💳 Hide End Cards" 0
+@advanced checkbox gameSection              "  🎮 Hide Game Section" 1
+@advanced checkbox musicSection             "  🎵 Hide Music Section" 0
 
 @advanced select customAppearance           "⚒️ Custom Appearance" ["Enabled", "Disabled"]
 @advanced checkbox navigationBar            "  🌑 Dark Navigation Bar" 1
 @advanced checkbox searchBox                "  🌑 Dark Search Box" 0
 @advanced checkbox scroll_Bar               "  🌑 Dark Scroll Bar" 1
 
-@advanced select customLikeDislike          "⚒️ Custom Like/Dislike Button Color" ["Enabled", "Disabled"]
+@advanced select customLikeDislike          "⚒️ Custom Colors For Like/Dislike" ["Enabled", "Disabled"]
 @advanced checkbox customThumbs             "  🗿 Colorize Thumbs" 0
 @advanced color likeBtnColor                "  👍 Like Button Color" #3ea6ff
 @advanced color dislikeBtnColor             "  👎 Dislike Button Color" #3ea6ff
+
+@advanced select customRatioBar             "⚒️ Custom Colors For Ratio Bar" ["Enabled", "Disabled"]
+@advanced color likeRBColor                 "  🎨 Like Ratio Color" #32CD32
+@advanced color dislikeRBColor              "  🎨 Dislike Ratio Color" #FF0000
 
 ==/UserStyle== */
 i=!important //
@@ -574,30 +579,42 @@ Support me: https://ko-fi.com/sapondanaisriwan
     /* ⚒️ Custom Video Details */
     if (customVideoDetails=="Enabled") {
 
-        /*  🫣 Hide Download Button*/
+        /* 🔔 Hide Bell Icon */
+        ytd-subscription-notification-toggle-button-renderer-next.ytd-subscribe-button-renderer > yt-button-shape > button {
+            & > .yt-spec-button-shape-next__icon,
+            & > .yt-spec-button-shape-next__secondary-icon {
+                display: none if bellIcon;
+            }
+        }
+
+        /*  ⬇️ Hide Download Button */
         ytd-download-button-renderer {
             display: none if downloadBtn;
         }
 
-        /*  🫣 Hide Share button */
+        /*  ➡️ Hide Share Button */
         #top-level-buttons-computed > ytd-button-renderer > yt-button-shape > button {
             display: none if shareBtn;
         }
 
-        /* 🫣 Hide Comments section */
+        /* 💬 Hide Comments Section */
         ytd-comments {
             display: none if commentSection;
         }
 
         #flexible-item-buttons > ytd-button-renderer > yt-button-shape {
+
+            /* 🙏 Hide Thanks Button */
             &:has(path[d="M16.5\,3C19.02\,3\,21\,5.19\,21\,7.99c0\,3.7-3.28\,6.94-8.25\,11.86L12\,20.59l-0.74-0.73l-0.04-0.04C6.27\,14.92\,3\,11.69\,3\,7.99 C3\,5.19\,4.98\,3\,7.5\,3c1.4\,0\,2.79\,0.71\,3.71\,1.89L12\,5.9l0.79-1.01C13.71\,3.71\,15.1\,3\,16.5\,3 M16.5\,2c-1.74\,0-3.41\,0.88-4.5\,2.28 C10.91\,2.88\,9.24\,2\,7.5\,2C4.42\,2\,2\,4.64\,2\,7.99c0\,4.12\,3.4\,7.48\,8.55\,12.58L12\,22l1.45-1.44C18.6\,15.47\,22\,12.11\,22\,7.99 C22\,4.64\,19.58\,2\,16.5\,2L16.5\,2z M11.33\,10.86c0.2\,0.14\,0.53\,0.26\,1\,0.36c0.47\,0.1\,0.86\,0.22\,1.18\,0.35 c0.99\,0.4\,1.49\,1.09\,1.49\,2.07c0\,0.7-0.28\,1.27-0.83\,1.71c-0.33\,0.26-0.73\,0.43-1.17\,0.54V17h-2v-1.16 c-0.18-0.05-0.37-0.1-0.53-0.19c-0.46-0.23-0.92-0.55-1.18-0.95C9.15\,14.48\,9.06\,14.24\,9\,14h2c0.05\,0.09\,0.07\,0.18\,0.15\,0.25 c0.23\,0.19\,0.54\,0.29\,0.92\,0.29c0.36\,0\,0.63-0.07\,0.82-0.22s0.28-0.35\,0.28-0.59c0-0.25-0.11-0.45-0.34-0.6s-0.59-0.27-1.1-0.39 c-1.67-0.39-2.51-1.16-2.51-2.34c0-0.68\,0.26-1.26\,0.78-1.71c0.28-0.25\,0.62-0.43\,1-0.54V7h2v1.12c0.46\,0.11\,0.85\,0.29\,1.18\,0.57 C14.59\,9.05\,14.9\,9.48\,15\,10h-2c-0.04-0.09-0.1-0.17-0.16-0.24c-0.17-0.19-0.44-0.29-0.81-0.29c-0.32\,0-0.56\,0.08-0.74\,0.24 c-0.17\,0.16-0.26\,0.36-0.26\,0.6C11.03\,10.53\,11.13\,10.72\,11.33\,10.86z"]) {
                 display: none if thanksBtn;
             }
 
+            /* ✂️ Hide Clip Button */
             &:has(path[d="M8\,7c0\,0.55-0.45\,1-1\,1S6\,7.55\,6\,7c0-0.55\,0.45-1\,1-1S8\,6.45\,8\,7z M7\,16c-0.55\,0-1\,0.45-1\,1c0\,0.55\,0.45\,1\,1\,1s1-0.45\,1-1 C8\,16.45\,7.55\,16\,7\,16z M10.79\,8.23L21\,18.44V20h-3.27l-5.76-5.76l-1.27\,1.27C10.89\,15.97\,11\,16.47\,11\,17c0\,2.21-1.79\,4-4\,4 c-2.21\,0-4-1.79-4-4c0-2.21\,1.79-4\,4-4c0.42\,0\,0.81\,0.08\,1.19\,0.2l1.37-1.37l-1.11-1.11C8\,10.89\,7.51\,11\,7\,11c-2.21\,0-4-1.79-4-4 c0-2.21\,1.79-4\,4-4c2.21\,0\,4\,1.79\,4\,4C11\,7.43\,10.91\,7.84\,10.79\,8.23z M10.08\,8.94L9.65\,8.5l0.19-0.58C9.95\,7.58\,10\,7.28\,10\,7 c0-1.65-1.35-3-3-3S4\,5.35\,4\,7c0\,1.65\,1.35\,3\,3\,3c0.36\,0\,0.73-0.07\,1.09-0.21L8.7\,9.55l0.46\,0.46l1.11\,1.11l0.71\,0.71l-0.71\,0.71 L8.9\,13.91l-0.43\,0.43l-0.58-0.18C7.55\,14.05\,7.27\,14\,7\,14c-1.65\,0-3\,1.35-3\,3c0\,1.65\,1.35\,3\,3\,3s3-1.35\,3-3 c0-0.38-0.07-0.75-0.22-1.12l-0.25-0.61L10\,14.8l1.27-1.27l0.71-0.71l0.71\,0.71L18.15\,19H20v-0.15L10.08\,8.94z M17.73\,4H21v1.56 l-5.52\,5.52l-2.41-2.41L17.73\,4z M18.15\,5l-3.67\,3.67l1\,1L20\,5.15V5H18.15z"]) {
                 display: none if clipBtn;
             }
 
+            /* 💾 Hide Save Button */
             &:has(path[d="M22\,13h-4v4h-2v-4h-4v-2h4V7h2v4h4V13z M14\,7H2v1h12V7z M2\,12h8v-1H2V12z M2\,16h8v-1H2V16z"]) {
                 display: none if saveBtn;
             }
@@ -766,6 +783,18 @@ Support me: https://ko-fi.com/sapondanaisriwan
         }
     }
 
+    /* ⚒️ Custom Ratio Bar Color */
+    if (customRatioBar=="Enabled") {
+        /* 🎨 Like Ratio Color */
+        #ryd-bar {
+            background: likeRBColor;
+        }
+
+        /* 🎨 Dislike Ratio Color */
+        #ryd-bar-container {
+            background: dislikeRBColor;
+        }
+    }
 
     /* ⚙️ Avatar Roundness */
     #avatar {
@@ -775,7 +804,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
         &.ytd-reel-player-header-renderer,
         &.ytd-active-account-header-renderer,
         &.yt-live-chat-message-input-renderer,
-        &.ytd-shelf-renderer {
+        &.ytd-shelf-renderer,
+        &.ytd-topic-channel-details-renderer {
             border-radius: customAvatarRadius i;
         }
     }
@@ -783,7 +813,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
     #author-thumbnail {
         &.ytd-comment-simplebox-renderer,
         &.ytd-comment-renderer yt-img-shadow.ytd-comment-renderer,
-        &.ytd-creator-heart-renderer {
+        &.ytd-creator-heart-renderer,
+        &.ytd-backstage-post-renderer yt-img-shadow.ytd-backstage-post-renderer {
             border-radius: customAvatarRadius i;
         }
     }
@@ -851,9 +882,19 @@ Support me: https://ko-fi.com/sapondanaisriwan
         border-radius: customAvatarRadius i;
     }
 
-    /* unloaded element */
+    /* Unloaded element */
     #home-page-skeleton .channel-avatar,
     .channel-avatar.ytd-ghost-grid-renderer {
+        border-radius: customAvatarRadius i;
+    }
+
+    /* Create post in community tab */
+    #dialog-header.ytd-backstage-post-dialog-renderer #header-author-thumbnail.ytd-backstage-post-dialog-renderer {
+        border-radius: customAvatarRadius i;
+    }
+
+    /* Youtube studio */
+    .image-thumbnail.ytcp-navigation-drawer {
         border-radius: customAvatarRadius i;
     }
 
@@ -1048,7 +1089,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     /* Subscribed button on channels*/
     /* Please let me know if you can figure out how to make this shorter and cleaner */
-    [page-subtype="channels"] {
+    [page-subtype="channels"],
+    #channel.ytd-grid-channel-renderer {
         #subscribe yt-button-shape button {
             &[aria-label^="Subscribe"], //English
             &[aria-label^="ติดตาม"], // Thai
@@ -1142,8 +1184,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
             background-color: var(--sub-white--text-btn) i;
         }
     }
-
-
 
     /* Removes background color */
     .yt-simple-endpoint.style-scope.ytd-subscription-notification-toggle-button-renderer yt-icon-button {
@@ -1368,6 +1408,16 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
 
     ytd-universal-watch-card-renderer[rounded] #header.ytd-universal-watch-card-renderer {
+        border-radius: customBorderRadius i;
+    }
+
+    /* video preview on music section */
+    ytd-carousel-item-renderer[rounded] #pagination-thumbnails.ytd-carousel-item-renderer button.ytd-carousel-item-renderer yt-img-shadow.ytd-carousel-item-renderer {
+        border-radius: customBorderRadius i;
+    }
+
+    /* video game thumbnail */
+    yt-channel-thumbnail-with-link-renderer[style_=CHANNEL_THUMBNAIL_STYLE_BOXART_ROUNDED] #avatar.yt-channel-thumbnail-with-link-renderer {
         border-radius: customBorderRadius i;
     }
 
