add more icon 🥲

--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -10,14 +10,14 @@
 @license        MIT
 @preprocessor   stylus
 
+@advanced checkbox restoreOldIcon           "🥶 Restore Old Icon (Beta)" 0
 @advanced checkbox antiShorts               "❌ Anti-Shorts" 1
-@advanced range customAvatarRadius          "⚙️ Avatar Roundness" [50, 0, 50, 1, '%']
+@advanced range customAvatarRadius          "⚙️ Profile Roundness" [50, 0, 50, 1, '%']
 @advanced range customBorderRadius          "⚙️ Border Radius" [0, 0, 24, 1, 'px']
 @advanced checkbox centeredSearchResults    "🔎 Centered The Search Results" 1
 @advanced checkbox displayFullTitle         "🎦 Display Full Title For Videos" 0
 @advanced checkbox moreAnimation            "🎬 More Animations" 1
 @advanced checkbox removeTaps               "❌ Remove Taps" 0
-@advanced checkbox restoreOldIcon           "🧓 Restore Old Icon" 0
 @advanced checkbox subscriptionsGrid        "📄 Subscriptions In A Grid Layout" 1
 @advanced checkbox watchedOverlay           "👀 Watched Overlay" 0
 
@@ -1598,16 +1598,28 @@ Support me: https://ko-fi.com/sapondanaisriwan
             d: path("M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z");
         }
 
-        /* Arrow down*/
+        /* Arrow down */
         path[d="M12\,15.7L5.6\,9.4l0.7-0.7l5.6\,5.6l5.6-5.6l0.7\,0.7L12\,15.7z"] {
             color: var(--yt-spec-grey-3);
             d: path("M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z");
+        }
+
+        /* Arrow up */
+        polygon[points="18.4\,14.6 12\,8.3 5.6\,14.6 6.4\,15.4 12\,9.7 17.6\,15.4 "] {
+            color: var(--yt-spec-grey-3);
+            stroke: currentColor;
         }
 
         /* Your Channel */
         path[d="M3\,3v18h18V3H3z M4.99\,20c0.39-2.62\,2.38-5.1\,7.01-5.1s6.62\,2.48\,7.01\,5.1H4.99z M9\,10c0-1.65\,1.35-3\,3-3s3\,1.35\,3\,3 c0\,1.65-1.35\,3-3\,3S9\,11.65\,9\,10z M12.72\,13.93C14.58\,13.59\,16\,11.96\,16\,10c0-2.21-1.79-4-4-4c-2.21\,0-4\,1.79-4\,4 c0\,1.96\,1.42\,3.59\,3.28\,3.93c-4.42\,0.25-6.84\,2.8-7.28\,6V4h16v15.93C19.56\,16.73\,17.14\,14.18\,12.72\,13.93z"] {
             color: var(--yt-spec-grey-3);
             d: path("M3 5v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2H5c-1.11 0-2 .9-2 2zm12 4c0 1.66-1.34 3-3 3s-3-1.34-3-3 1.34-3 3-3 3 1.34 3 3zm-9 8c0-2 4-3.1 6-3.1s6 1.1 6 3.1v1H6v-1z");
+        }
+
+        /* Your video */
+        path[d="M10\,8l6\,4l-6\,4V8L10\,8z M21\,3v18H3V3H21z M20\,4H4v16h16V4z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M18.45,3.75H5.55a1.81,1.81,0,0,0-1.8,1.8v12.8a1.8,1.8,0,0,0,1.7,1.9h12.9a1.8,1.8,0,0,0,1.9-1.69v-13A1.8,1.8,0,0,0,18.45,3.75Zm-.1,14.6H5.55V5.55h12.8Zm-3.2-6.1-5,3.2V9.05Z")
         }
 
         /* Youtube Studio */
@@ -1640,11 +1652,11 @@ Support me: https://ko-fi.com/sapondanaisriwan
             d: path("M12 1l9 4v6c0 5.5-3.8 10.7-9 12-5.2-1.3-9-6.5-9-12V5l9-4zM7.7 15.1A5.3 5.3 0 0 1 12 6.7a5.3 5.3 0 0 1 4.3 8.4c-.6-1.1-3-1.7-4.3-1.7-1.3 0-3.7.6-4.3 1.7zM12 8.3a2.2 2.2 0 0 0-2.2 2.2c0 1.2 1 2.2 2.2 2.2a2.2 2.2 0 0 0 2.2-2.2c0-1.2-1-2.2-2.2-2.2zm0-2.6A6.3 6.3 0 0 0 5.7 12a6.3 6.3 0 0 0 6.3 6.3 6.3 6.3 0 0 0 6.3-6.3A6.3 6.3 0 0 0 12 5.7z");
         }
 
-        /* Theme*/
+        /* Appearcne */
         path[d="M12 22C10.93 22 9.86998 21.83 8.83998 21.48L7.41998 21.01L8.83998 20.54C12.53 19.31 15 15.88 15 12C15 8.12 12.53 4.69 8.83998 3.47L7.41998 2.99L8.83998 2.52C9.86998 2.17 10.93 2 12 2C17.51 2 22 6.49 22 12C22 17.51 17.51 22 12 22ZM10.58 20.89C11.05 20.96 11.53 21 12 21C16.96 21 21 16.96 21 12C21 7.04 16.96 3 12 3C11.53 3 11.05 3.04 10.58 3.11C13.88 4.81 16 8.21 16 12C16 15.79 13.88 19.19 10.58 20.89Z"] {
-            d: path("M 280.485 201.515 L 284 198 L 287.515 201.515 L 292.485 201.515 L 292.485 206.485 L 296 210 L 292.485 213.515 L 292.485 218.485 L 287.515 218.485 L 284 222 L 280.485 218.485 L 275.515 218.485 L 275.515 213.515 L 272 210 L 275.515 206.485 L 275.515 201.515 L 280.485 201.515 Z M 283.727 215.864 C 287.116 215.864 289.864 213.251 289.864 210.029 C 289.864 206.807 287.116 204.194 283.727 204.194 C 283.074 204.194 282.165 204.396 281 204.8 C 282.532 206.378 283.298 208.121 283.298 210.029 C 283.298 211.937 282.445 213.636 280.739 215.127 C 282.007 215.618 283.003 215.864 283.727 215.864 Z");
+            color: var(--yt-spec-grey-3);
+            d: path("M8.49,3.51,12,0l3.51,3.51h5v5L24,12l-3.51,3.51v5h-5L12,24,8.49,20.49h-5v-5L0,12,3.51,8.49v-5Zm3.24,14.35A6,6,0,0,0,17.86,12a6,6,0,0,0-6.13-5.84A9.11,9.11,0,0,0,9,6.8,7.37,7.37,0,0,1,11.3,12a6.66,6.66,0,0,1-2.56,5.1A8.92,8.92,0,0,0,11.73,17.86Z");
         }
-
 
         /* Language*/
         path[d="M12.26\,16.18l-2.93-2.87c-0.8\,0.86-1.64\,1.71-2.48\,2.54L4.6\,18.1L3.9\,17.4l2.25-2.25c0.84-0.84\,1.68-1.69\,2.48-2.55 c-1.18-1.23-2.17-2.64-2.9-4.18L5.73\,8.4h1.14c0.65\,1.26\,1.47\,2.43\,2.44\,3.45c1.59-1.81\,2.89-3.69\,3.43-5.7H2.08v-1h6.65V3h1v2.15 h6.78v1h-2.73c-0.54\,2.32-2.01\,4.42-3.77\,6.42l2.63\,2.58C12.51\,15.5\,12.39\,15.82\,12.26\,16.18z M21.51\,21.01h-0.95l-1.12-3.04h-4.91 l-1.11\,3.04h-0.96l4.09-10.81h0.87L21.51\,21.01z M19.15\,17.2l-2.17-5.89l-2.17\,5.89H19.15z"] {
@@ -1701,6 +1713,79 @@ Support me: https://ko-fi.com/sapondanaisriwan
             d: path("M11,11v6H7v-6H11 M12,10H6v8h6V10L12,10z M3,3.03V21h14l4-4V3.03 M20,4v11.99L19.99,16H16v3.99L15.99,20H4V4H20z M18,8H6V6 h12V8z M18,15h-5v-2h5V15z M18,12h-5v-2h5V1Setting 2z")
         }
 
+        /* Sport */
+        path[d="M17 3V5V6V10V10.51L16.99 10.97C16.94 13.1 15.66 14.94 13.74 15.67H13.72L13.66 15.69L13 15.95V16.65V19V20H14V21H15H10V20H11V19V16.65V15.95L10.34 15.71L10.26 15.68H10.25C8.33 14.95 7.05 13.11 7 10.98V10.51V10V6V5V3H17ZM18 2H6V5H4V6V10V11H6.01C6.07 13.53 7.63 15.78 9.97 16.64C9.98 16.64 9.99 16.64 10 16.65V19H9V20H8V22H16V20H15V19H14V16.65C14.01 16.65 14.02 16.65 14.03 16.64C16.36 15.78 17.93 13.54 17.99 11H20V10V6V5H18V2ZM18 10V6H19V10H18ZM5 10V6H6V10H5Z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M18.86,6.15V3H5.14V6.15H1V9a4.25,4.25,0,0,0,4.25,4.25h.52a6.85,6.85,0,0,0,6.21,4h0L7.89,19.62V22h8.23V19.62L12,17.24a6.84,6.84,0,0,0,5.29-2.49h0A7.15,7.15,0,0,0,18,13.66c.07-.12.12-.25.18-.38h.52A4.25,4.25,0,0,0,23,9V6.15ZM2.61,8.9V7.72H5.14v2.67a6.88,6.88,0,0,0,.13,1.29A2.79,2.79,0,0,1,2.61,8.9Zm18.78,0a2.79,2.79,0,0,1-2.66,2.78,6.88,6.88,0,0,0,.13-1.29V7.72h2.53Z")
+        }
+
+        /* Comment */
+        path[d="M12\,3v8.59l-1.29-1.3-.3-.29H4V3h8m1-1H3v9h7l3\,3V2ZM9\,7H5V8H9Zm2-2H5V6h6Z"],
+        path[d="M8\,7h8v2H8V7z M8\,13h5v-2H8V13z M5\,3v13h10h0.41l0.29\,0.29L19\,19.59V3H5 M4\,2h16v20l-5-5H4V2L4\,2z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M21.99 4c0-1.1-.89-2-1.99-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h14l4 4-.01-18zM18 14H6v-2h12v2zm0-3H6V9h12v2zm0-3H6V6h12v2z")
+        }
+
+        /* Clear all watch history */
+        path[d="M11\,17H9V8h2V17z M15\,8h-2v9h2V8z M19\,4v1h-1v16H6V5H5V4h4V3h6v1H19z M17\,5H7v15h10V5z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z");
+        }
+
+        /* Pause watch history */
+        path[d="M11\,16H9V8h2V16z M15\,8h-2v8h2V8z M12\,3c4.96\,0\,9\,4.04\,9\,9s-4.04\,9-9\,9s-9-4.04-9-9S7.04\,3\,12\,3 M12\,2C6.48\,2\,2\,6.48\,2\,12 s4.48\,10\,10\,10s10-4.48\,10-10S17.52\,2\,12\,2L12\,2z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2ZM11,16.5H8v-9h3Zm5,0H13v-9h3Z");
+        }
+
+        /* Right arrow */
+        path[d="M9.4\,18.4l-0.7-0.7l5.6-5.6L8.6\,6.4l0.7-0.7l6.4\,6.4L9.4\,18.4z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M16.26,12.05l-7,7L7.84,17.65l5.6-5.6-5.7-5.7L9.15,4.94Z")
+        }
+
+        /* Left arrow */
+        path[d="M14.6\,18.4L8.3\,12l6.4-6.4l0.7\,0.7L9.7\,12l5.6\,5.6L14.6\,18.4z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z");
+        }
+
+        /* hamburger */
+        path[d="M21\,6H3V5h18V6z M21\,11H3v1h18V11z M21\,17H3v1h18V17z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z");
+        }
+
+        /* Search */
+        path[d="M20.87\,20.17l-5.59-5.59C16.35\,13.35\,17\,11.75\,17\,10c0-3.87-3.13-7-7-7s-7\,3.13-7\,7s3.13\,7\,7\,7c1.75\,0\,3.35-0.65\,4.58-1.71 l5.59\,5.59L20.87\,20.17z M10\,16c-3.31\,0-6-2.69-6-6s2.69-6\,6-6s6\,2.69\,6\,6S13.31\,16\,10\,16z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z");
+        }
+
+        /* */
+        path[d=""] {
+            color: var(--yt-spec-grey-3);
+            d: path("");
+        }
+
+        /* */
+        path[d=""] {
+            color: var(--yt-spec-grey-3);
+            d: path("");
+        }
+
+        /* */
+        path[d=""] {
+            color: var(--yt-spec-grey-3);
+            d: path("");
+        }
+
+        /* */
+        path[d=""] {
+            color: var(--yt-spec-grey-3);
+            d: path("");
+        }
+
         /* Setting */
         path[d="M12\,9c1.65\,0\,3\,1.35\,3\,3s-1.35\,3-3\,3s-3-1.35-3-3S10.35\,9\,12\,9 M12\,8c-2.21\,0-4\,1.79-4\,4s1.79\,4\,4\,4s4-1.79\,4-4 S14.21\,8\,12\,8L12\,8z M13.22\,3l0.55\,2.2l0.13\,0.51l0.5\,0.18c0.61\,0.23\,1.19\,0.56\,1.72\,0.98l0.4\,0.32l0.5-0.14l2.17-0.62l1.22\,2.11 l-1.63\,1.59l-0.37\,0.36l0.08\,0.51c0.05\,0.32\,0.08\,0.64\,0.08\,0.98s-0.03\,0.66-0.08\,0.98l-0.08\,0.51l0.37\,0.36l1.63\,1.59l-1.22\,2.11 l-2.17-0.62l-0.5-0.14l-0.4\,0.32c-0.53\,0.43-1.11\,0.76-1.72\,0.98l-0.5\,0.18l-0.13\,0.51L13.22\,21h-2.44l-0.55-2.2l-0.13-0.51 l-0.5-0.18C9\,17.88\,8.42\,17.55\,7.88\,17.12l-0.4-0.32l-0.5\,0.14l-2.17\,0.62L3.6\,15.44l1.63-1.59l0.37-0.36l-0.08-0.51 C5.47\,12.66\,5.44\,12.33\,5.44\,12s0.03-0.66\,0.08-0.98l0.08-0.51l-0.37-0.36L3.6\,8.56l1.22-2.11l2.17\,0.62l0.5\,0.14l0.4-0.32 C8.42\,6.45\,9\,6.12\,9.61\,5.9l0.5-0.18l0.13-0.51L10.78\,3H13.22 M14\,2h-4L9.26\,4.96c-0.73\,0.27-1.4\,0.66-2\,1.14L4.34\,5.27l-2\,3.46 l2.19\,2.13C4.47\,11.23\,4.44\,11.61\,4.44\,12s0.03\,0.77\,0.09\,1.14l-2.19\,2.13l2\,3.46l2.92-0.83c0.6\,0.48\,1.27\,0.87\,2\,1.14L10\,22h4 l0.74-2.96c0.73-0.27\,1.4-0.66\,2-1.14l2.92\,0.83l2-3.46l-2.19-2.13c0.06-0.37\,0.09-0.75\,0.09-1.14s-0.03-0.77-0.09-1.14l2.19-2.13 l-2-3.46L16.74\,6.1c-0.6-0.48-1.27-0.87-2-1.14L14\,2L14\,2z"] {
             color: var(--yt-spec-grey-3);
@@ -1717,6 +1802,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
         path[d="M13\,14h-2v-2h2V14z M13\,5h-2v6h2V5z M19\,3H5v16.59l3.29-3.29L8.59\,16H9h10V3 M20\,2v15H9l-5\,5V2H20L20\,2z"] {
             color: var(--yt-spec-grey-3);
             d: path("M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z")
+        }
+
+        /* Upload Video */
+        path[d="M14\,13h-3v3H9v-3H6v-2h3V8h2v3h3V13z M17\,6H3v12h14v-6.39l4\,1.83V8.56l-4\,1.83V6 M18\,5v3.83L22\,7v8l-4-1.83V19H2V5H18L18\,5 z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M 17 10.5 V 7 c 0 -0.55 -0.45 -1 -1 -1 H 4 c -0.55 0 -1 0.45 -1 1 v 10 c 0 0.55 0.45 1 1 1 h 12 c 0.55 0 1 -0.45 1 -1 v -3.5 l 4 4 v -11 l -4 4 Z M 14 13 h -3 v 3 H 9 v -3 H 6 v -2 h 3 V 8 h 2 v 3 h 3 v 2 Z");
         }
 
         /* Like */
@@ -1749,11 +1840,17 @@ Support me: https://ko-fi.com/sapondanaisriwan
             d: path("M9.64 7.64c.23-.5.36-1.05.36-1.64 0-2.21-1.79-4-4-4S2 3.79 2 6s1.79 4 4 4c.59 0 1.14-.13 1.64-.36L10 12l-2.36 2.36C7.14 14.13 6.59 14 6 14c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4c0-.59-.13-1.14-.36-1.64L12 14l7 7h3v-1L9.64 7.64zM6 8c-1.1 0-2-.89-2-2s.9-2 2-2 2 .89 2 2-.9 2-2 2zm0 12c-1.1 0-2-.89-2-2s.9-2 2-2 2 .89 2 2-.9 2-2 2zm6-7.5c-.28 0-.5-.22-.5-.5s.22-.5.5-.5.5.22.5.5-.22.5-.5.5zM19 3l-6 6 2 2 7-7V3z");
         }
 
-
         /* Save */
         path[d="M22\,13h-4v4h-2v-4h-4v-2h4V7h2v4h4V13z M14\,7H2v1h12V7z M2\,12h8v-1H2V12z M2\,16h8v-1H2V16z"] {
             color: var(--yt-spec-grey-3);
             d: path("M14 10H2v2h12v-2zm0-4H2v2h12V6zm4 8v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM2 16h8v-2H2v2z");
+        }
+
+        /* 3 dot */
+        path[d="M7.5\,12c0\,0.83-0.67\,1.5-1.5\,1.5S4.5\,12.83\,4.5\,12s0.67-1.5\,1.5-1.5S7.5\,11.17\,7.5\,12z M12\,10.5c-0.83\,0-1.5\,0.67-1.5\,1.5 s0.67\,1.5\,1.5\,1.5s1.5-0.67\,1.5-1.5S12.83\,10.5\,12\,10.5z M18\,10.5c-0.83\,0-1.5\,0.67-1.5\,1.5s0.67\,1.5\,1.5\,1.5s1.5-0.67\,1.5-1.5 S18.83\,10.5\,18\,10.5z"] {
+            color: var(--yt-spec-grey-3);
+
+            d: path("M7.5,12c0,0.83-0.67,1.5-1.5,1.5S4.5,12.83,4.5,12s0.67-1.5,1.5-1.5S7.5,11.17,7.5,12z M12,10.5c-0.83,0-1.5,0.67-1.5,1.5 s0.67,1.5,1.5,1.5s1.5-0.67,1.5-1.5S12.83,10.5,12,10.5z M18,10.5c-0.83,0-1.5,0.67-1.5,1.5s0.67,1.5,1.5,1.5s1.5-0.67,1.5-1.5 S18.83,10.5,18,10.5z")
         }
 
         #menu-container ytd-button-renderer yt-button-shape button span,
