--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -366,7 +366,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             }
 
             /* Remove videos count*/
-            #metadata.ytd-channel-renderer > span:nth-last-child(-n+2) {
+            #metadata.ytd-channel-renderer > span:nth-last-child(-n + 2) {
                 display: none;
             }
 
@@ -1520,8 +1520,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
 
     if (restoreOldIcon) {
-
-        /* disliked */
+        
+        /* Disliked */
         path[d="M18\,4h3v10h-3V4z M5.23\,14h4.23l-1.52\,4.94C7.62\,19.97\,8.46\,21\,9.62\,21c0.58\,0\,1.14-0.24\,1.52-0.65L17\,14V4H6.57 C5.5\,4\,4.59\,4.67\,4.38\,5.61l-1.34\,6C2.77\,12.85\,3.82\,14\,5.23\,14z"] {
             d: path("M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z");
         }
@@ -1561,6 +1561,12 @@ Support me: https://ko-fi.com/sapondanaisriwan
             color: var(--yt-spec-grey-3);
             d: path("M3.67 8.67h14V11h-14V8.67zm0-4.67h14v2.33h-14V4zm0 9.33H13v2.34H3.67v-2.34zm11.66 0v7l5.84-3.5-5.84-3.5z")
         }
+
+        /* Playlist */
+        path[d="M15\,19v-8l7\,4L15\,19z M22\,7H2v2h20V7z M13\,13H2v-2h11V13z M13\,17H2v-2h11V17z"] {
+            d: path("M3.67 8.67h14V11h-14V8.67zm0-4.67h14v2.33h-14V4zm0 9.33H13v2.34H3.67v-2.34zm11.66 0v7l5.84-3.5-5.84-3.5z")
+        }
+
 
         /* Watch Later */
         path[d="M14.97,16.95L10\,13.87V7h2v5.76l4.03\,2.49L14.97\,16.95z M12\,3c-4.96\,0-9\,4.04-9\,9s4.04\,9\,9\,9s9-4.04\,9-9S16.96\,3\,12\,3 M12\,2c5.52\,0\,10\,4.48\,10\,10s-4.48\,10-10\,10S2\,17.52\,2\,12S6.48\,2\,12\,2L12\,2z"] {
@@ -1762,6 +1768,48 @@ Support me: https://ko-fi.com/sapondanaisriwan
             d: path("M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z");
         }
 
+        /* Sort by*/
+        path[d="M21\,6H3V5h18V6z M15\,11H3v1h12V11z M9\,17H3v1h6V17z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z");
+        }
+
+        /* Shuffle */
+        path[d="M18.15\,13.65l3.85\,3.85l-3.85\,3.85l-0.71-0.71L20.09\,18H19c-2.84\,0-5.53-1.23-7.39-3.38l0.76-0.65 C14.03\,15.89\,16.45\,17\,19\,17h1.09l-2.65-2.65L18.15\,13.65z M19\,7h1.09l-2.65\,2.65l0.71\,0.71l3.85-3.85l-3.85-3.85l-0.71\,0.71 L20.09\,6H19c-3.58\,0-6.86\,1.95-8.57\,5.09l-0.73\,1.34C8.16\,15.25\,5.21\,17\,2\,17v1c3.58\,0\,6.86-1.95\,8.57-5.09l0.73-1.34 C12.84\,8.75\,15.79\,7\,19\,7z M8.59\,9.98l0.75-0.66C7.49\,7.21\,4.81\,6\,2\,6v1C4.52\,7\,6.92\,8.09\,8.59\,9.98z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M10.59 9.17L5.41 4 4 5.41l5.17 5.17 1.42-1.41zM14.5 4l2.04 2.04L4 18.59 5.41 20 17.96 7.46 20 9.5V4h-5.5zm.33 9.41l-1.41 1.41 3.13 3.13L14.5 20H20v-5.5l-2.04 2.04-3.13-3.13z");
+        }
+
+        /* Add  videos */
+        path[d="M20\,12h-8v8h-1v-8H3v-1h8V3h1v8h8V12z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z");
+        }
+
+        /* Collaborate */
+        path[d="M14 20C14 17.79 15.79 16 18 16C20.21 16 22 17.79 22 20H14ZM18 16C16.9 16 16 15.1 16 14C16 12.9 16.9 12 18 12C19.1 12 20 12.9 20 14C20 15.1 19.1 16 18 16ZM15 8C15 5.79 13.21 4 11 4C8.79 4 7 5.79 7 8C7 9.96 8.42 11.59 10.28 11.93C4.77 12.21 2 15.76 2 20H12.02L12 19H3.06C3.44 15.89 5.67 12.9 11 12.9C11.62 12.9 12.19 12.95 12.73 13.03L13.57 12.19C12.99 12.06 12.38 11.96 11.72 11.93C13.58 11.59 15 9.96 15 8ZM11 11C9.35 11 8 9.65 8 8C8 6.35 9.35 5 11 5C12.65 5 14 6.35 14 8C14 9.65 12.65 11 11 11Z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z")
+        }
+
+        /* */
+        path[d="M12\,8.91c1.7\,0\,3.09\,1.39\,3.09\,3.09S13.7\,15.09\,12\,15.09S8.91\,13.7\,8.91\,12S10.3\,8.91\,12\,8.91 M12\,7.91 c-2.25\,0-4.09\,1.84-4.09\,4.09s1.84\,4.09\,4.09\,4.09s4.09-1.84\,4.09-4.09S14.25\,7.91\,12\,7.91L12\,7.91z M12\,6.18 c3.9\,0\,7.35\,2.27\,8.92\,5.82c-1.56\,3.55-5.02\,5.82-8.92\,5.82c-3.9\,0-7.35-2.27-8.92-5.82C4.65\,8.45\,8.1\,6.18\,12\,6.18 M12\,5.18 C7.45\,5.18\,3.57\,8.01\,2\,12c1.57\,3.99\,5.45\,6.82\,10\,6.82s8.43-2.83\,10-6.82C20.43\,8.01\,16.55\,5.18\,12\,5.18L12\,5.18z"] {
+            color: var(--yt-spec-grey-3);
+            d: path("M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z");
+        }
+
+        /* */
+        path[d=""] {
+            color: var(--yt-spec-grey-3);
+            d: path("");
+        }
+
+        /* */
+        path[d=""] {
+            color: var(--yt-spec-grey-3);
+            d: path("");
+        }
+
         /* */
         path[d=""] {
             color: var(--yt-spec-grey-3);
@@ -1785,6 +1833,14 @@ Support me: https://ko-fi.com/sapondanaisriwan
             color: var(--yt-spec-grey-3);
             d: path("");
         }
+
+
+        /* */
+        path[d=""] {
+            color: var(--yt-spec-grey-3);
+            d: path("");
+        }
+
 
         /* Setting */
         path[d="M12\,9c1.65\,0\,3\,1.35\,3\,3s-1.35\,3-3\,3s-3-1.35-3-3S10.35\,9\,12\,9 M12\,8c-2.21\,0-4\,1.79-4\,4s1.79\,4\,4\,4s4-1.79\,4-4 S14.21\,8\,12\,8L12\,8z M13.22\,3l0.55\,2.2l0.13\,0.51l0.5\,0.18c0.61\,0.23\,1.19\,0.56\,1.72\,0.98l0.4\,0.32l0.5-0.14l2.17-0.62l1.22\,2.11 l-1.63\,1.59l-0.37\,0.36l0.08\,0.51c0.05\,0.32\,0.08\,0.64\,0.08\,0.98s-0.03\,0.66-0.08\,0.98l-0.08\,0.51l0.37\,0.36l1.63\,1.59l-1.22\,2.11 l-2.17-0.62l-0.5-0.14l-0.4\,0.32c-0.53\,0.43-1.11\,0.76-1.72\,0.98l-0.5\,0.18l-0.13\,0.51L13.22\,21h-2.44l-0.55-2.2l-0.13-0.51 l-0.5-0.18C9\,17.88\,8.42\,17.55\,7.88\,17.12l-0.4-0.32l-0.5\,0.14l-2.17\,0.62L3.6\,15.44l1.63-1.59l0.37-0.36l-0.08-0.51 C5.47\,12.66\,5.44\,12.33\,5.44\,12s0.03-0.66\,0.08-0.98l0.08-0.51l-0.37-0.36L3.6\,8.56l1.22-2.11l2.17\,0.62l0.5\,0.14l0.4-0.32 C8.42\,6.45\,9\,6.12\,9.61\,5.9l0.5-0.18l0.13-0.51L10.78\,3H13.22 M14\,2h-4L9.26\,4.96c-0.73\,0.27-1.4\,0.66-2\,1.14L4.34\,5.27l-2\,3.46 l2.19\,2.13C4.47\,11.23\,4.44\,11.61\,4.44\,12s0.03\,0.77\,0.09\,1.14l-2.19\,2.13l2\,3.46l2.92-0.83c0.6\,0.48\,1.27\,0.87\,2\,1.14L10\,22h4 l0.74-2.96c0.73-0.27\,1.4-0.66\,2-1.14l2.92\,0.83l2-3.46l-2.19-2.13c0.06-0.37\,0.09-0.75\,0.09-1.14s-0.03-0.77-0.09-1.14l2.19-2.13 l-2-3.46L16.74\,6.1c-0.6-0.48-1.27-0.87-2-1.14L14\,2L14\,2z"] {
@@ -1853,6 +1909,21 @@ Support me: https://ko-fi.com/sapondanaisriwan
             d: path("M7.5,12c0,0.83-0.67,1.5-1.5,1.5S4.5,12.83,4.5,12s0.67-1.5,1.5-1.5S7.5,11.17,7.5,12z M12,10.5c-0.83,0-1.5,0.67-1.5,1.5 s0.67,1.5,1.5,1.5s1.5-0.67,1.5-1.5S12.83,10.5,12,10.5z M18,10.5c-0.83,0-1.5,0.67-1.5,1.5s0.67,1.5,1.5,1.5s1.5-0.67,1.5-1.5 S18.83,10.5,18,10.5z")
         }
 
+        ytd-video-primary-info-renderer #segmented-like-button > ytd-toggle-button-renderer > yt-button-shape > button > div.yt-spec-button-shape-next__icon yt-icon {
+            content: url('https://i.imgur.com/tCGmoON.png') i;
+            filter: contrast(0);
+            width: 100% i;
+            height: 100% i;
+        }
+
+            ytd-video-primary-info-renderer #top-level-buttons-computed > ytd-toggle-button-renderer:first-of-type > a > yt-icon-button > #button > yt-icon,
+    #segmented-like-button yt-icon {
+        content: url('https://i.imgur.com/tCGmoON.png') i;
+        filter: contrast(0);
+        width: 100% i;
+        height: 100% i;
+    }
+        
         #menu-container ytd-button-renderer yt-button-shape button span,
         #flexible-item-buttons yt-button-shape button span,
         #top-level-buttons-computed > ytd-button-renderer > yt-button-shape > button > div.cbox.yt-spec-button-shape-next--button-text-content > span,
